--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,10 @@
     <title>Text Summarisation</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <form action="/getSummary" method="post">
+        <textarea name="rawtext" id="rawtext"></textarea>
+        <input type="number" name="size" id="size">
+        <button id="submit" type="submit">Rewrite</button>
+    </form>
 </body>
 </html>
