Home page frontend done

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text Summarisation</title>
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
-    <form action="/getSummary" method="post">
-        <textarea name="rawtext" id="rawtext"></textarea>
-        <input type="number" name="size" id="size">
-        <button id="submit" type="submit">Rewrite</button>
-    </form>
+    <header id="header">
+        <h4 id="logo">Logo name</h4>
+        <div id="nav-links">
+            <a class="nav-link">Home</a>
+            <a class="nav-link">AnsBot</a>
+            <a class="nav-link">Bot2</a>
+            <a class="nav-link">Bot3</a>
+        </div>
+    </header>
+    <div id="index-body">
+        <img alt="ai" src="https://img.freepik.com/premium-vector/electric-brain_106072-29.jpg" id="ai-pic">
+        <div id="index-body-disc">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit corrupti magnam maxime porro! Quas molestias laudantium dolores iusto exercitationem, assumenda maxime eaque accusantium neque, nobis fugiat ducimus reprehenderit voluptas temporibus.
+        </div>
+    </div>
+    <div id="chatbot">
+        <img src="https://img.icons8.com/3d-fluency/94/chatbot.png" alt="chatbot" id="chat-bot"/>
+    </div>
+    <footer id="footer">
+        Copyright © 2022 - 2023
+    </footer>
 </body>
 </html>
