--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
     <header id="header">
         <h4 id="logo">Logo name</h4>
         <div id="nav-links">
-            <a class="nav-link">Home</a>
-            <a class="nav-link">AnsBot</a>
+            <a href="/" class="nav-link">Home</a>
+            <a href="/ansBot" class="nav-link">AnsBot</a>
             <a class="nav-link">Bot2</a>
             <a class="nav-link">Bot3</a>
         </div>
