--- a/static/styles.css
+++ b/static/styles.css
@@ -127,7 +127,7 @@ a{
     border-radius: 1rem;
     padding: 2%;
 }
-#submit{
+.submit{
     padding: 2%;
     border-radius: 1rem;
     background-color: #f6d334;
@@ -144,4 +144,13 @@ a{
     overflow-x: hidden;
     overflow-y: auto;
     box-shadow: inset 2px 2px 4px #000;
+}
+#GPT-submit{
+    background-color: #86dc3d;
+}
+#submit-btns{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
 }
