--- a/templates/index.html
+++ b/templates/index.html
@@ -8,25 +8,36 @@
 </head>
 <body>
     <header id="header">
-        <h4 id="logo">Logo name</h4>
+        <h1 id="logo">Botify</h1>
         <div id="nav-links">
             <a href="/" class="nav-link">Home</a>
-            <a href="/ansBot" class="nav-link">AnsBot</a>
-            <a class="nav-link">Bot2</a>
-            <a class="nav-link">Bot3</a>
+            <a href="/ansBot" class="nav-link">SummarEase</a>
+            <a class="nav-link">ExamWiz</a>
+            <a class="nav-link">SatBot</a>
         </div>
     </header>
     <div id="index-body">
         <img alt="ai" src="https://img.freepik.com/premium-vector/electric-brain_106072-29.jpg" id="ai-pic">
         <div id="index-body-disc">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit corrupti magnam maxime porro! Quas molestias laudantium dolores iusto exercitationem, assumenda maxime eaque accusantium neque, nobis fugiat ducimus reprehenderit voluptas temporibus.
+            <div id="index-body-disc-head">
+                Welcome to Botlify
+            </div>
+            <div id="objectives">
+                <ul>
+                    <li class="objective-points" id="obj1"></li>
+                    <li class="objective-points" id="obj2"></li>
+                    <li class="objective-points" id="obj3"></li>
+                    <li class="objective-points" id="obj4"></li>
+                </ul>
+            </div>
         </div>
     </div>
     <div id="chatbot">
-        <img src="https://img.icons8.com/3d-fluency/94/chatbot.png" alt="chatbot" id="chat-bot"/>
+        <img src="/static/message.svg" alt="chatbot" id="chat-bot"/>
     </div>
     <footer id="footer">
         Copyright © 2022 - 2023
     </footer>
+    <script src="/static/index.js"></script>
 </body>
 </html>
