--- a/templates/rewrite.html
+++ b/templates/rewrite.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <header id="header">
-        <h4 id="logo">Logo name</h4>
+        <h1 id="logo">Botify</h1>
         <div id="nav-links">
             <a href="/" class="nav-link">Home</a>
-            <a href="/ansBot" class="nav-link">AnsBot</a>
-            <a class="nav-link">Bot2</a>
-            <a class="nav-link">Bot3</a>
+            <a href="/ansBot" class="nav-link">SummarEase</a>
+            <a class="nav-link">ExamWiz</a>
+            <a class="nav-link">SatBot</a>
         </div>
     </header>
     <div id="chatbot">
-        <img src="https://img.icons8.com/3d-fluency/94/chatbot.png" alt="chatbot" id="chat-bot"/>
+        <img src="/static/message.svg" alt="chatbot" id="chat-bot"/>
     </div>
     <div id="prediction-frame">
         <form id="raw-text-form" action="/getSummary" method="post">
