--- a/templates/rewrite.html
+++ b/templates/rewrite.html
@@ -21,15 +21,25 @@
     </div>
     <div id="prediction-frame">
         <form id="raw-text-form" action="/getSummary" method="post">
-            <textarea name="rawtext" id="rawtext" placeholder="Enter your lengthy answer from your sources. We will make it short for you :)"></textarea>
-            <input type="number" name="size" id="size" placeholder="Enter the marks of the question">
+            <textarea required name="rawtext" id="rawtext" placeholder="Enter your lengthy answer from your sources. We will make it short for you :)"></textarea>
+            <input required min="1" max="10" type="number" name="size" id="size" placeholder="Enter the marks of the question">
             <div id="submit-btns">
                 <button value="nlp" name="sumtype" class="submit" type="submit">Rewrite</button>
-                <button value="GPT" type="submit" id="GPT-submit" class="submit" name="sumtype">Rewrite</button>
+                <button value="abstract" type="submit" id="GPT-submit" class="submit" name="sumtype">Rewrite</button>
             </div>
         </form>
         <div id="summary-div">
             <h5>{{summary}}</h5>
+        </div>
+    </div>
+    <div id="legend">
+        <div class="legend-child">
+            <div id="extract" class="circle"></div>
+            <p>Simpler model, may be inaccurate sometimes</p>
+        </div>
+        <div class="legend-child">
+            <div id="abstract" class="circle"></div>
+            <p>Complex model, mostly accurate</p>
         </div>
     </div>
     <footer id="footer">
