--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sathvik AITT</title>
-    <link rel="stylesheet" href="/static/styles.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Sathvik AITT</title>
+        <link rel="stylesheet" href="/static/styles.css">
+    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
 </head>
 <body>
     <header id="header">
@@ -13,7 +14,6 @@
             <a href="/" class="nav-link">Home</a>
             <a href="/ansBot" class="nav-link">SummarEase</a>
             <a class="nav-link">ExamWiz</a>
-            <a href="/satBot" class="nav-link">SatBot</a>
         </div>
     </header>
     <div id="index-body">
@@ -32,13 +32,14 @@
             </div>
         </div>
     </div>
-    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-    <df-messenger
-    intent="WELCOME"
-    chat-title="sathvik-ai-chatbot"
-    agent-id={bid}
-    language-code="en"
-    ></df-messenger>
+    <div id="chat-cont">
+        <df-messenger chat-title="SatBot" chat-icon="/static/message.svg"
+        intent="WELCOME"
+        chat-title="sathvik-ai-chatbot"
+        agent-id="563386da-64a0-49ef-84f1-75226b98180b"
+        language-code="en"
+        ></df-messenger>
+    </div>
     <footer id="footer">
         Copyright © 2022 - 2023
     </footer>
